--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE HTML>
-  <head>
-    <title></title>
 
-    <!-- MDL Inclusions -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-  </head>
-
-  <body>
-  
-    <form name="myForm" action="handler.php" method="POST">
-          
+  <title>Circle Area and Circumference Calculator</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Circle Calculator</h1>
+    <form action="handler.php" method="POST">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="number" id="diameter" name="diameter" required>
+        <label class="mdl-textfield__label" for="diameter">Diameter</label>
+      </div>
+      <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        Calculate
+      </button>
     </form>
-
-  </body>
+  </div>
+</body>
 </html>
+
